--- a/resources/src/main/res/values-zh/strings.xml
+++ b/resources/src/main/res/values-zh/strings.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
   <!-- AndroidIDE -->
-  <string name="copy" tools:override="true">Copy</string>
-  <string name="text_to_search">Text to search</string>
+  <string name="copy" tools:override="true">复制</string>
+  <string name="text_to_search">要搜索的文本</string>
   <string name="title_open_source_licenses">开源许可证</string>
-  <string name="msg_about_licensed_under">许可证: </string>
-  <string name="about_option_email">邮件</string>
+  <string name="msg_about_licensed_under">许可证：</string>
+  <string name="about_option_email">发电子邮件</string>
   <string name="about_option_website">网站</string>
   <string name="about_footer">AndroidIDE %1$s (%2$s)</string>
-  <string name="about_subtitle">简单地说，一款适用于 Android 的 IDE</string>
-  <string name="msg_get_package_failed">获取包名失败!</string>
-  <string name="msg_share_app">AndroidIDE是一个用于在Android设备上构建Android应用的集成开发环境。它支持： \n1. Gradle \n2. OpenJDK 17.0-22\n3. 先进的Java自动补全\n4. XML自动补全 \n5. Kotlin支持，还有更多\n\n请从这里下载AndroidIDE：https://androidide.com</string>
+  <string name="about_subtitle">简而言之，一个适用于 Android 的 IDE</string>
+  <string name="msg_get_package_failed">获取包名失败！</string>
+  <string name="msg_share_app">AndroidIDE 是一个集成开发环境，用于在您的 Android 智能手机上构建 Android 应用程序。它支持：\n1. Gradle\n2. OpenJDK 17.0–22\n3. 高级 Java 自动补全\n4. XML 自动补全\n5. Kotlin 支持，以及更多\n\n从 https://androidide.com 下载 AndroidIDE</string>
   <string name="msg_need_help">如果您在使用AndroidIDE构建应用时遇到任何问题，您可以加入Telegram群组寻求帮助。\n\n您也可以通过电子邮件对我们提出建议。</string>
   <string name="discuss_amp_help">讨论 &amp; 帮助</string>
-  <string name="need_help">需要帮助?</string>
+  <string name="need_help">需要帮助？</string>
   <string name="other">其他</string>
   <string name="share_with_friends">分享给朋友</string>
   <string name="ide_preferences">环境设置</string>
   <string name="discussions_on_telegram">在 Telegram 上讨论</string>
   <string name="official_tg_channel">官方 Telegram 频道</string>
-  <string name="msg_empty_view">没有已可以显示的呢&#8230;</string>
+  <string name="msg_empty_view">没有数据</string>
   <string name="title_terminal">终端</string>
   <string name="reset">重置</string>
   <string name="app_logs">应用日志</string>
@@ -30,8 +30,8 @@
   <string name="msg_cannot_perform_fix">无法执行快速修复</string>
   <string name="msg_performing_actions">正在执行代码操作&#8230;</string>
   <string name="msg_api_info_since">在API %d 添加</string>
-  <string name="msg_api_info_removed">在API %d 移除</string>
-  <string name="msg_api_info_deprecated">在API %d 弃用</string>
+  <string name="msg_api_info_removed">已在 API %d 中移除</string>
+  <string name="msg_api_info_deprecated">已在 API %d 中弃用</string>
   <string name="msg_finding_references">查找引用&#8230;</string>
   <string name="msg_finding_definition">跳转定义&#8230;</string>
   <string name="msg_no_definition">没有找到定义</string>
@@ -42,10 +42,10 @@
   <string name="get_ready_for_something_awesome">让我们准备迎接很棒的东西!</string>
   <string name="msg_picked_isnt_dir">选择的路径不是文件夹!</string>
   <string name="msg_pick_single_file">请只选择一个文件夹</string>
-  <string name="please_wait">请稍等 &#8230;</string>
+  <string name="please_wait">请稍等片刻…</string>
   <!-- Project Builder -->
   <string name="title_device_not_supported">设备不受支持</string>
-  <string name="msg_device_not_supported">很不幸，您的设备当前不受我们支持。我们对其产生的不便很抱歉。\n\n支持的CPU架构: aarch64 与 armeabi-v7a</string>
+  <string name="msg_device_not_supported">很不幸，目前不支持您的设备。对于给您带来的不便，我们深表歉意。\n\n支持的 CPU 架构：aarch64 和 armeabi-v7a</string>
   <string name="build">构建</string>
   <string name="build_output">编译输出</string>
   <string name="lint_tasks">Lint 任务</string>
@@ -54,19 +54,19 @@
   <string name="quick_run_debug">快速运行</string>
   <string name="msg_sync_needed">Gradle文件已改变。请重新编译您的项目来同步依赖和配置项。</string>
   <string name="preparing">准备中</string>
-  <string name="preparing_first">准备中，第一次编译可能耗费 10&#8211;15 分钟!</string>
-  <string name="msg_installing_gradlew">Gradle Wrapper不可用!\n正在安装默认版本。 如有需要，Gradle v7.4将会被下载</string>
+  <string name="preparing_first">准备中，首次构建可能需要 10-15 分钟！</string>
+  <string name="msg_installing_gradlew">Gradle Wrapper 不可用！\n正在安装默认的包装器。如有需要，将下载 Gradle v7.4。</string>
   <string name="msg_getting_daemom_status">正在获取Gradle守护进程状态，请稍等&#8230;</string>
   <string name="gradle_daemon_status">Gradle守护进程状态</string>
-  <string name="title_install_apks">安装APK</string>
+  <string name="title_install_apks">安装 APK</string>
   <string name="title_clear_output">清空输出</string>
   <string name="run">运行</string>
   <!-- Project -->
   <string name="title_first_build">第一次编译</string>
   <string name="msg_first_build">这是您安装AndroidIDE后第一次编译项目，由于需要下载Gradle和各种依赖项目，第一次编译需要较长时间。这可能要花费10&#8211;15分钟，但这完全取决于您的网络连接。\n\n请耐心等待 &#8230;</string>
   <string name="create_project">创建项目</string>
-  <string name="minimum_sdk">最小SDK版本</string>
-  <string name="target_sdk">目标SDK版本</string>
+  <string name="minimum_sdk">最小 SDK 版本</string>
+  <string name="target_sdk">目标 SDK 版本</string>
   <string name="new_project">创建新项目</string>
   <string name="package_name">应用包名</string>
   <string name="project_app_name">应用名称</string>
@@ -85,7 +85,7 @@
   <string name="template_basic">基本项目</string>
   <string name="template_description_basic">一个有AppCompat Toolbar 和 Floating Action Button的基本项目</string>
   <string name="template_description_empty">一个使用默认Toolbar的空项目。当您想要自己完成那些基本的工作时适合您。</string>
-  <string name="template_description_navigation_drawer">使用AppCompat Toolbar, DrawerLayout and NavigationView的项目</string>
+  <string name="template_description_navigation_drawer">带有 AppCompat Toolbar、DrawerLayout 和 NavigationView 的项目</string>
   <string name="template_empty">空项目</string>
   <string name="template_navigation_drawer">导航侧滑项目</string>
   <string name="template_libgdx">LibGDX 游戏</string>
@@ -100,16 +100,16 @@
   <string name="template_no_activity">无 Activity</string>
   <string name="template_no_activity_description">创建一个无 Activity 的新项目</string>
   <!-- Files -->
-  <string name="template_no_AndroidX">NoAndroidX</string>
-  <string name="template_description_noAndroidX">创建一个没有 AndroidX 库的新项目</string>
+  <string name="template_no_AndroidX">无 AndroidX</string>
+  <string name="template_description_noAndroidX">创建一个不带 AndroidX 库的项目</string>
   <string name="save">保存</string>
   <string name="menu_find">查找</string>
   <string name="menu_find_file">在文件中查找</string>
   <string name="menu_find_project">在项目中查找</string>
   <string name="msg_search_modules">在模块中搜索</string>
-  <string name="msg_no_modules">在项目中没有找到模块</string>
-  <string name="hint_find_project_filter">过滤文件扩展名 (可选)</string>
-  <string name="msg_find_project_filter">用 \'|\' 分割</string>
+  <string name="msg_no_modules">未在项目中找到模块</string>
+  <string name="hint_find_project_filter">过滤文件扩展名（可选）</string>
+  <string name="msg_find_project_filter">用‘|’分隔</string>
   <string name="msg_empty_search_query">请输入欲查找文本</string>
   <string name="msg_select_search_modules">选择要搜索的模块</string>
   <string name="msg_searching_project">正在项目中搜索，请稍等&#8230;</string>
@@ -140,17 +140,17 @@
   <string name="new_name">新名称</string>
   <string name="new_file">新文件</string>
   <string name="create_auto_layout">创建布局文件</string>
-  <string name="new_java_class">新Java类</string>
-  <string name="new_xml_resource">新XML资源文件</string>
+  <string name="new_java_class">新 Java 类</string>
+  <string name="new_xml_resource">新 XML 资源文件</string>
   <string name="new_folder">新文件夹</string>
   <string name="title_confirm_delete">确认删除</string>
   <string name="msg_confirm_delete">你真的要删除它吗:\n%s?</string>
   <string name="copied">复制成功!</string>
-  <string name="msg_rename_file">输入文件（夹）的新名称.</string>
-  <string name="renamed">重命名成功!</string>
-  <string name="rename_failed">无法重命名文件!</string>
-  <string name="deleted">删除成功!</string>
-  <string name="delete_failed">无法删除!</string>
+  <string name="msg_rename_file">输入文件（夹）的新名称。</string>
+  <string name="renamed">重命名成功！</string>
+  <string name="rename_failed">无法重命名文件！</string>
+  <string name="deleted">删除成功！</string>
+  <string name="delete_failed">无法删除文件！</string>
   <string name="copy_path">复制路径</string>
   <string name="rename_file">重命名</string>
   <string name="delete_file">删除</string>
@@ -158,7 +158,7 @@
   <string name="action_closeAll">关闭全部</string>
   <string name="action_closeOthers">关闭其他</string>
   <string name="action_closeThis">关闭当前</string>
-  <string name="all_saved">所有文件已保存!</string>
+  <string name="all_saved">所有文件已保存！</string>
   <string name="save_failed">保存文件失败</string>
   <string name="msg_newfile_dest">目标: %s/</string>
   <string name="restype_drawable">可绘制资源</string>
@@ -170,17 +170,17 @@
   <string name="title_interface">接口</string>
   <string name="classtype_enum">枚举</string>
   <string name="msg_checking_storage_permissions">正在检查存储权限</string>
-  <string name="msg_failed_list_files">无法列出项目文件列表!</string>
+  <string name="msg_failed_list_files">无法列出项目文件！</string>
   <string name="msg_storage_denied">没有存储权限，无法继续</string>
   <!-- Code Editor -->
-  <string name="msg_storage_granted">已授予存储权限!</string>
+  <string name="msg_storage_granted">已授予存储权限！</string>
   <string name="open_with">打开方式&#8230;</string>
   <string name="undo">撤销</string>
   <string name="redo">重做</string>
   <!-- Preferences -->
   <string name="title_change_text_size">编辑器字体大小</string>
-  <string name="idepref_about_title">关于AndroidIDE</string>
-  <string name="idepref_build_clearCache_title">清除Gradle缓存</string>
+  <string name="idepref_about_title">关于 AndroidIDE</string>
+  <string name="idepref_build_clearCache_title">清除 Gradle 缓存</string>
   <string name="idepref_build_clearCache_summary">清除Gradle缓存目录。这将会删除所有已下载的依赖项。所需的文件在下一次编译中会被重新下载。</string>
   <string name="idepref_build_customgradlecommands_title">附加Gradle命令</string>
   <string name="idepref_build_customgradlecommands_summary">选择执行Gradle任务时要添加的命令</string>
@@ -209,14 +209,14 @@
   <string name="msg_tab_size">指定TAB代表的空格数</string>
   <string name="msg_preferences">偏好设置</string>
   <string name="pref_changelog">更新日志</string>
-  <string name="msg_editor_font_size">请选择编辑器的默认字体大小 :</string>
-  <string name="msg_clear_cache">这将删除 Gradle 创建的缓存目录。 如果您删除它，下一次构建可能会比平时花费更长的时间，因为 Gradle 将再次下载所需的文件。\n\n您确定要删除缓存吗？</string>
+  <string name="msg_editor_font_size">请选择编辑器的默认字体大小：</string>
+  <string name="msg_clear_cache">这将删除 Gradle 创建的缓存目录。如果删除，下一次的构建可能需要更长的时间，因为 Gradle 将再次下载所需的文件。\n\n您确定要删除缓存吗？</string>
   <!-- Error Messages used while Logging -->
   <string name="err_init_sdkinfo">无法获取SDK信息</string>
   <string name="err_cannot_preview_layout">无法预览布局</string>
   <string name="err_cannot_inflate_layout">布局实例化失败</string>
   <!-- Layout preview and designer -->
-  <string name="msg_cannot_preview_layout">无法预览布局!</string>
+  <string name="msg_cannot_preview_layout">无法预览布局！</string>
   <string name="title_preview_layout">预览布局</string>
   <string name="label_ui_designer_content">主要 UI 设计器内容</string>
   <string name="msg_applicable_attrs">可用属性</string>
@@ -229,16 +229,16 @@
   <string name="msg_view_deletion_failed">删除视图失败</string>
   <string name="msg_empty_ui_layout">还没有添加控件。单击以添加</string>
   <string name="msg_no_attr_format">为找到可用的属性格式</string>
-  <string name="msg_generate_xml_failed">生成XML代码失败</string>
-  <string name="title_generating_xml">生成XML代码</string>
+  <string name="msg_generate_xml_failed">生成 XML 代码失败</string>
+  <string name="title_generating_xml">生成 XML 代码</string>
   <string name="title_code_generation_failed">代码生成失败</string>
-  <string name="msg_code_generation_failed">生成XML代码失败，你仍要退出吗？</string>
+  <string name="msg_code_generation_failed">生成 XML 代码失败，你仍要退出吗？</string>
   <string name="msg_invalid_designer_result">布局设计器返回了非法结果</string>
   <string name="msg_swipe_up">上滑以查看编译输出和日志等</string>
-  <string name="msg_ide_crashed">AndroidIDE崩溃了</string>
-  <string name="msg_report_crash">请在GitHub上添加新的issue并提供以下异常栈信息 :</string>
-  <string name="msg_crash_report_hint">单击下面的按钮复制异常栈，并打开issue页面</string>
-  <string name="msg_copy_report_action">复制并反馈</string>
+  <string name="msg_ide_crashed">AndroidIDE 崩溃了</string>
+  <string name="msg_report_crash">请使用以下堆栈跟踪在 Github 上打开一个 issue：</string>
+  <string name="msg_crash_report_hint">单击下面的按钮以复制日志和打开 issues 页面。</string>
+  <string name="msg_copy_report_action">复制并报告</string>
   <string name="msg_reading_bootstrap">正在读取引导程序压缩包…</string>
   <string name="msg_bootstrap_installation_error">因为以下异常，引导程序安装失败</string>
   <string name="title_translations">翻译</string>
@@ -504,4 +504,9 @@
   <string name="idepref_group_debugging">调试</string>
   <string name="idepref_devOptions_dumpLogs_title">转储日志</string>
   <string name="idepref_devOptions_dumpLogs_summary">将 AndroidIDE 日志转储到 $HOME/.androidide/logs</string>
+  <string name="msg_emptyview_applogs">运行应用程序的调试变体以在此处查看其日志。</string>
+  <string name="msg_emptyview_idelogs">IDE 中的日志显示在这里。</string>
+  <string name="msg_emptyview_diagnostics">打开文件以显示其诊断结果</string>
+  <string name="msg_emptyview_buildoutput">"构建应用程序或运行任务以在此处查看其构建输出。"</string>
+  <string name="msg_codeaction_failed">无法执行代码操作</string>
 </resources>
