--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -601,4 +601,5 @@
   <string name="title_choose_application">Choose application</string>
   <string name="err_selected_variant_not_found">Selected build variant not found</string>
   <string name="title_disconnect_log_senders">Disconnect log senders</string>
+  <string name="title_begin_long_select">Begin long select</string>
 </resources>
