--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -604,4 +604,8 @@
   <string name="title_begin_long_select">Begin long select</string>
   <string name="idepref_editor_stickScroll_title">Sticky scroll</string>
   <string name="idepref_editor_stickyScroll_summary">Show the current scope at the top while scrolling the editor.</string>
+  <string name="idepref_launchAppAfterInstall_title">Launch app after installation</string>
+  <string name="idepref_launchAppAfterInstall_summary">If enabled, the IDE will (without confirmation) launch the application right after it is installed.</string>
+  <string name="title_run_options">Run options</string>
+  <string name="err_cannot_determine_package">Cannot run app. Unable to determine package name.</string>
 </resources>
