fix: add warnings for incompatible or unsupported IDE build configurations

--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
   <!-- Project Builder -->
   <string name="title_device_not_supported">Device Not Supported</string>
   <string name="msg_device_not_supported">Unfortunately, your device is not supported at the moment. We are sorry for the inconvenience.\n\nSupported CPU ABIs: aarch64 and armeabi-v7a</string>
+
   <string name="build">Build</string>
   <string name="build_output">Build output</string>
   <string name="lint_tasks">Lint tasks</string>
@@ -610,4 +611,7 @@
   <string name="err_cannot_determine_package">Cannot run app. Unable to determine package name.</string>
   <string name="msg_launch_failure_no_app_module">Cannot run application. No application modules found in project.</string>
   <string name="title_launch_app">Launch app</string>
+  <string name="msg_64bit_on_32bit_device">You are using 64-bit variant of AndroidIDE on a 32-bit-only device. This configuration is not supported. Please install the 32-bit variant of AndroidIDE.</string>
+  <string name="title_32bit_on_64bit_device">Configuration Warning</string>
+  <string name="msg_32bit_on_64bit_device">You are using 32-bit variant of AndroidIDE on a 64-bit device. This configuration may work, but it\'ll result in reduced performance and possible security vulnerabilities. Please avoid using this configuration whenever possible.</string>
 </resources>
